Add new translations

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -151,5 +151,10 @@
     "description": ""
   },
   "attribute": "Attribut",
-  "note": "Notiz"
+  "attributes": "Attribute",
+  "note": "Notiz",
+  "notes": "Notizen",
+  "eraseAllSettings": "Alle Einstellungen löschen",
+  "pin": "Anheften",
+  "unpin": "Lösen"
 }
