--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -22,6 +22,8 @@
   "failed": "Failed",
   "loadingFailed": "Loading failed",
 
+  "eraseAllSettings": "Erase all settings",
+
   "client": "Client",
   "server": "Server",
 
@@ -183,5 +185,15 @@
 
 
   "attribute": "Attribute",
-  "note": "note"
+  "attributes": "Attributes",
+  "note": "note",
+  "notes": "notes",
+
+  "pin": "Pin",
+  "unpin": "Unpin",
+
+
+  "share": "Share",
+
+  "menu": "Menu"
 }
