--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -186,8 +186,8 @@
 
   "attribute": "Attribute",
   "attributes": "Attributes",
-  "note": "note",
-  "notes": "notes",
+  "note": "Note",
+  "notes": "Notes",
 
   "pin": "Pin",
   "unpin": "Unpin",
