--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -152,7 +152,7 @@
   },
   "attribute": "Atributo",
   "attributes": "Atributos",
-  "note": "nota",
+  "note": "Nota",
   "notes": "Notas",
   "eraseAllSettings": "Borrar todos los ajustes",
   "pin": "Anclar",
